Last lines of code.. untill I upskill

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,10 @@
         "js": ["file.js"]
       }
       ],
-      
+
+      "background": {
+        "service_worker": "background.js"
+      },
      
     "action": {
         "default_popup": "index.html",
